correction des endpoint profile coach et stagiaire
