# routes/api.php
@@ -20,16 +20,31 @@ use Illuminate\Support\Facades\Route;
 
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\Controller;
 
 Route::post('register/admin', [AuthController::class, 'registerAdmin']);
 // Route::post('register/coache', [AuthController::class, 'registerCoache']);
 // Route::post('register/stagiaire', [AuthController::class, 'registerStagiaire']);
 
 Route::post('login', [AuthController::class, 'login']);
-Route::get('me', [AuthController::class, 'me']);
+// Route::get('me', [AuthController::class, 'me']);
 Route::post('logout', [AuthController::class, 'logout']);
 
 Route::middleware('auth:api')->group(function () {
     Route::post('register/coache', [AuthController::class, 'registerCoache']);
     Route::post('register/stagiaire', [AuthController::class, 'registerStagiaire']);
+});
+
+
+Route::middleware(['jwt.auth', 'coache'])->group(function () {
+    Route::get('coaches/{id}/stagiaires', [Controller::class, 'getStagiaires']);
+    Route::get('stagiaires/{id}', [Controller::class, '']);
+    Route::get('profileCoach', [AuthController::class, 'profileCoach']);
+    // Route::get('/coach/dashboard', [CoachController::class, 'index']);
+    // Route::post('/coach/stagiaires', [CoachController::class, 'store']);
+});
+
+Route::middleware(['jwt.auth', 'stagiaire'])->group(function () {
+     Route::get('profileStagiaire', [AuthController::class, 'profileStagiaire']);
+   // Route::get('/stagiaire/cours', [StagiaireController::class, 'index']);
 });
